<resources>
    <string name="app_name">Fitness</string>
    <string name="textview_gender">Укажите пол</string>
    <string name="textview_weight">Укажите вес</string>
    <string name="textview_height">Укажите рост</string>
    <string name="textview_birthday">Укажите\nгод рождения</string>
    <string name="textview_goal">Укажите цель</string>
    <string name="button_next">Далее</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_video">Пример выполнения</string>
    <string name="textview_description_video">Описание</string>
</resources>